link to whatsapp added

--- a/index.html
+++ b/index.html
@@ -29,8 +29,19 @@
             <img src="./images/slider.jpg" alt="">
             <div>
                 <h3>Nuestros conocimientos a su servicio</h3>
-                <h2>Estudio Jurídico Ponferrada</h2>
-                <p>+54 11 456457688</p>
+                <h2>Estudio Jurídico <br> Ponferrada y asoc.</h2>
+                <!-- <span id="main-phone">
+                    <img src="./icons/whatsapp.svg" alt="" 
+                    style="filter:invert()">
+                    <a href="https://api.whatsapp.com/send?phone=541164008156" target="blank">+54 11 64008156</a>
+                </span> -->
+                <a href="https://api.whatsapp.com/send?phone=541164008156" target="blank">
+                    <span id="main-phone">
+                        <img src="./icons/whatsapp.svg" alt="" 
+                        style="filter:invert()">
+                        <p>+54 11 64008156</p>
+                    </span>
+                </a>
             </div>
         </div>
         <div name="services" id="services">
@@ -63,11 +74,14 @@
         <div name="contact" id="contact">
                 <div class="contact-detail" id="phone">
                     <span>Teléfono</span> 
-                    <span>+54 11 1348736487</span>
+                    <span>
+
+                        <a href="https://api.whatsapp.com/send?phone=541164008156" target="blank">+54 11 64008156</a>
+                    </span>
                 </div>  
                 <div class="contact-detail" id="mail">
                     <span>Mail</span> 
-                    <span>noeliaponferrada@gmail.com</span>
+                    <span>noelia_ponferrada@hotmail.com</span>
                 </div> 
                 <div class="contact-detail" id="adress">
                     <span>Dirección</span> 
