Media query for mobile devices

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                     style="filter:invert()">
                     <a href="https://api.whatsapp.com/send?phone=541164008156" target="blank">+54 11 64008156</a>
                 </span> -->
+                <p id="introduction">Nos enfocamos en Usted y en la mejor solución a sus problemas. <br>
+                    Años de experiencia en acuerdos prejudiciales y en mediaciones avalan nuestro compromiso. <br>
+                    No dude en contactarse y asesorarse.</p>
                 <a href="https://api.whatsapp.com/send?phone=541164008156" target="blank">
                     <span id="main-phone">
                         <img src="./icons/whatsapp.svg" alt="" 
