--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
     })(window,document,'script','dataLayer','GTM-K5LF68B');</script>
     <!-- End Google Tag Manager -->
 <!-- Google tag (gtag.js) -->
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EZVZE6F7QE"></script>
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11035663798"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
+  gtag('config', 'G-EZVZE6F7QE');
+  
   gtag('config', 'AW-11035663798');
 </script>
     <meta charset="UTF-8">
